# cnd-airbyte-deployteq-source

source-deployteq/: README.md  acceptance-test-config.yml  config.json  configured_catalog.json  main.py  metadata.yaml  pyproject.toml
source-deployteq/source_deployteq/: __init__.py  run.py  source.py  spec.yaml
source-deployteq/source_deployteq/schemas/: click_events.json
source-deployteq/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
